<resources>
    <string name="app_name">Layouts</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="tchk">.</string>
    <string name="_C">C</string>
    <string name="procent">%</string>
    <string name="plMn">+/-</string>
    <string name="share">:</string>
    <string name="_X">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equally">=</string>
    <string name="_i">Инженерный калькулятор</string>
    <string name="_v">V</string>
    <string name="_a">A</string>
    <string name="_n">N</string>
    <string name="_o">O</string>
    <string name="_f">F</string>
    <string name="buttonGone">кнопка переключения</string>
    <string name="btn_1">{}</string>
    <string name="btn_2">|</string>
    <string name="btn_3"><![CDATA[<>]]></string>

</resources>
