<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/resultField"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_7"
            android:onClick="onNumberClick"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_8"
            android:onClick="onNumberClick"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_9"
            android:onClick="onNumberClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <Button
            android:id="@+id/button4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_4"
            android:onClick="onNumberClick"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_5"
            android:onClick="onNumberClick"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_6"
            android:onClick="onNumberClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <Button
            android:id="@+id/button1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_1"
            android:onClick="onNumberClick"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_2"
            android:onClick="onNumberClick"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_3"
            android:onClick="onNumberClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button0"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/_0"
            android:onClick="onNumberClick"/>

        <Button
            android:id="@+id/buttonTchk"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/tchk"
            android:onClick="onOperationClick"/>

    </LinearLayout>

</LinearLayout>